fixed overflow scroll for profile page

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,7 +8,7 @@ body {
     text-align: center;
     font-family: 'Quicksand', sans-serif;
     
-    overflow: hidden;
+    overflow:hidden;
 }
 
 .header {
@@ -55,6 +55,7 @@ body {
     grid-gap: 1em;
     margin: 0.5em;
     height: 100%;
+    overflow:auto;
 }
 
 .card {
